src/main/java/semantic/symbolTable/test/failing/redefindedLocalVar.ru
/? RedefinedVariableException
struct A {}
impl A {
    .(){}
    fn someFn()-> void {
        Int a;
        Str a;
    }
}
start{}